--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "start-clean": "watchman watch-del-all && yarn cache clean && rm -rf /tmp/metro-* && yarn run start --reset-cache",
+    "android-clean": "cd android && ./gradlew clean && cd ..",
+    "kill-node": "killall -9 node",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "reinstall-modules": "rm -rf node_modules yarn.lock && yarn install",
+    "reinstall-pods-soft": "cd ios && pod deintegrate && pod install && cd ..",
+    "reinstall-pods-hard": "cd ios && rm -rf Pods Podfile.lock && pod cache clean --all && pod deintegrate && pod install && cd .."
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-gesture-handler": "^2.2.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2"
   },
@@ -33,7 +41,8 @@
     "typescript": "^4.4.4"
   },
   "resolutions": {
-    "@types/react": "^17"
+    "@types/react": "^17",
+    "react-devtools-core": "4.14.0"
   },
   "jest": {
     "preset": "react-native",
