--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "reinstall-pods-hard": "cd ios && rm -rf Pods Podfile.lock && pod cache clean --all && pod deintegrate && pod install && cd .."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.17",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "@types/react-native-vector-icons": "^6.4.10",
