--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -224,4 +224,25 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 
+project.ext.vectoricons = [
+    iconFontNames: [ 'AntDesign.ttf',
+    'Entypo.ttf',
+    'EvilIcons.ttf',
+    'Feather.ttf',
+    'FontAwesome.ttf',
+    'FontAwesome5_Brands.ttf',
+    'FontAwesome5_Regular.ttf',
+    'FontAwesome5_Solid.ttf',
+    'Fontisto.ttf',
+    'Foundation.ttf',
+    'Ionicons.ttf',
+    'MaterialCommunityIcons.ttf',
+    'MaterialIcons.ttf',
+    'Octicons.ttf',
+    'SimpleLineIcons.ttf',
+    'Zocial.ttf'
+    ],  
+]
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
