--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -6,6 +6,12 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
+    <queries>
+      <intent>
+          <action android:name="android.speech.RecognitionService" />
+      </intent>
+    </queries>
+
     <application
         android:usesCleartextTraffic="true"
         tools:targetApi="28"
